# react-video-agent

./: .gitignore  README.md  README_ja.md  REFACTORING_PLAN.md  agent_run.py  pyproject.toml  requirements.txt
src/config/: logging.py
src/llm/: base.py  openai.py
src/react/: agent.py  config.py  frame_caption.py  utils.py
src/tools/: build_database.py  clip_search.py  frame_inspect.py  global_browse.py
src/utils/: retry.py
src/video/: caption.py  database.py  utils.py
