[project]
name = "react-video-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.2",
    "huggingface-hub>=1.5.0",
    "nano-vectordb>=0.0.4.3",
    "numpy<2",
    "openai>=2.24.0",
    "opencv-python-headless>=4.11.0.86",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
    "video2dataset>=1.0.0",
    "yt-dlp>=2026.2.21",
]
